*** New: Added Alert and Spy for Kinetic Distortion.
*** New: Added Alert for Quantum Disruptor.
** New: Added Viktus and Mordan
*** New: Added Enrage timer of 6 minutes 30 seconds.
*** New: Added Timer and Alert for Sibling Rivalry casts.
*** New: Added Timer and Alert for Ensnaring Creepers.
*** New: Added Timer and Alert for Ravenous Legion.
** New: Added Template for Volan.

Translations
* French updates
* German updates

----
v1.5.2

Castbars
* Fixed: Error 1304 - Passive castbar creation.
* Fixed: Error 70 - Player castbar pin scaling.
* Fixed: Error 621 - For either missing Name or missing object creation.
* Fixed: Error 1236 - Cast data access error.

KBM Messenger
* Change: Now uses new API event system.
* Change: Decreased the time it takes to gather KBM version info by 50% (This will be most noticeable in Ready Check) 

Res Master
* Fixed: Issues with Raid/Group members being only partially available when first encountered, and being locked out from updating.

LibSUnit
* Change: Prevented Units visible via damage [Idle] from being listed in Target List.
* Fixed: Partially available units were never registering themselves in the Name Lookup list, and never doing so from that point forward.

Tank-Swap
* Change: Tanks are now listed in order of Group/Raid position.

Menu
* Fixed: Error 906 - Menu items without settings tables.

Encounters
* Fixed: Error 4134 - Failed boss mod start attempt (forced reset).

Endless Eclipse
* Kain the Reaper
** New: Added Foul Blood debuff duration (Hard Mode usually)

----
v1.5.1

LibSUnit
* New: Added event Event.SafesUnitLib.Unit.Detail.Position (X or Y or Z position has changed) table{[UnitID] = UnitObj}
* New: Added a clean method for retrieving Unit objects. UnitObj = LibSUnit:RequestDetails(UnitID)
* Note: Using this method will create the Unit if available, or return an existing unit object.